corrections to not fail the build

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,5 +9,5 @@ build_script:
   - bash --version
   - curl --version
   - uname -a
-  - "[ -e /etc/os-release ] && cat /etc/os-release"
-  - "[ -e /etc/alpine-release ] && cat /etc/alpine-release"
+  - "if [ -e /etc/os-release ]; then cat /etc/os-release; fi"
+  - "if [ -e /etc/alpine-release ]; then cat /etc/alpine-release; fi"
