--- a/.github/workflows/vanity-urls.yml
+++ b/.github/workflows/vanity-urls.yml
@@ -7,11 +7,10 @@ on:
 
 jobs:
   vanity:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Runs a single command using the runners shell
-      - name: Request a vanity URL for the main TSK script
+      - name: Main script
         run: echo "${{ github.ref }}" | sed 's|refs/tags/||' | ( read version; curl -i https://git.io -F "url=https://raw.githubusercontent.com/tsk-tsk/tsk-tsk/${version}/tsk" -F "code=tsk-${version}" )
+      - name: Bootloader script
+        run: echo "${{ github.ref }}" | sed 's|refs/tags/||' | ( read version; curl -i https://git.io -F "url=https://raw.githubusercontent.com/tsk-tsk/tsk-tsk/${version}/boot-tsk" -F "code=boot-tsk-${version}" )
