--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,9 @@ name: Vanity URLs for all tagged versions
 
 on:
   push:
-    tags:
-      - '*'
+    branches: [ trunk]
+  pull_request:
+    branches: [ trunk]
 
 jobs:
   vanity:
