--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run smoke tests
         run: ./test/smoke.sh
+      - name: Run main class detection tests
+        run: ./test/main-class-detection.sh
