--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ "ubuntu-latest", "macos-11.0", "macos-10.15" ]
+        os: [ "ubuntu-latest", "macos-10.15" ]
 
     steps:
       - uses: actions/checkout@v2
