--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           sh_checker_comment: true
           sh_checker_checkbashisms_enable: true
-          sh_checker_exclude: "test/lib/shunit2 test/lib/helpers.sh" # helpers is sourced by tests
+          sh_checker_exclude: "test/lib/shunit2 test/lib/helpers.sh" # shunit2 is not ours and helpers is sourced by tests
